// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiling files (dynamic exports name) exported function 1`] = `
"define(function (require) {
  var exportedfunction = {};
  exportedfunction.foo = foo;

  function foo(a, b) {
    return a + b;
  }

  return exportedfunction;
});"
`;

exports[`compiling source (static exports name) exported function 1`] = `
"define(function (require) {
  var _exports = {};
  _exports.foo = foo;

  function foo(a, b) {
    return a + b;
  }

  return _exports;
});"
`;

exports[`compiling source (static exports name) main.js 1`] = `
"define(function (require) {
  var _exports = {};
  _exports.default = void 0;

  var _Component = _interopRequireDefault(require(\\"Component\\"));

  function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

  /* global _ */
  var _default = _Component.default.extend({
    onRendered: function () {
      console.log(this.state.name); // foo
    },
    // collect the information a component needs from the store
    // always return a new object
    filterState: function (state) {
      return _.extend({}, {
        name: state.name
      });
    }
  });

  _exports.default = _default;
  return _exports.default;
});"
`;

exports[`compiling source (static exports name) server module 1`] = `
"define(function (require) {
  var _exports = {};
  _exports.getPropertyFromCurrentPage = getPropertyFromCurrentPage;
  _exports.add = add;

  var _PortletContextUtil = _interopRequireDefault(require(\\"PortletContextUtil\\"));

  var _Properties = _interopRequireDefault(require(\\"Properties\\"));

  function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

  function getPropertyFromCurrentPage(prop) {
    return _Properties.default.get(_PortletContextUtil.default.getCurrentPage(), prop);
  }

  function add(a, b) {
    return a + b;
  }

  return _exports;
});"
`;
